# mathlog-spring-2022

./: .gitignore  README.md
compiler-verification/: main.v
coq-proofs/: hw.v  main.v
coq-proofs-2/: README.md  hw.v  main.v
n-queens-problem/: README.md  main.hs  n-queens-problem.cabal
n-queens-problem/app/: Main.hs
n-queens-problem/src/: Mylib.hs  QueenFormulaGen.hs
n-queens-problem/test/: Test.hs
normal-forms/: README.md  main.hs
smart-contract/: Crowdfunding.cfg  Crowdfunding.tla
