cabal-version:      2.4
name:               n-queens-problem
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

author:             Mark Prudnikov
maintainer:         mark.prudnikov@inbox.ru

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    README.md

executable n-queens-problem
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: QueenFormulaGen

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0, picosat == 0.1.6
    hs-source-dirs:   app, src
    default-language: Haskell2010
