cabal-version:      2.4
name:               n-queens-problem
version:            0.1.0.0

author:             Mark Prudnikov
maintainer:         mark.prudnikov@inbox.ru

extra-source-files:
    README.md

executable n-queens-problem
    main-is:          Main.hs
    other-modules:    QueenFormulaGen
    build-depends:    base ^>=4.14.3.0, picosat == 0.1.6
    hs-source-dirs:   app, src
    default-language: Haskell2010
